Several API changes
- `t.reporter(...)` -> `t.reporter = ...`
- `t.only(...)` -> `t.only = [...]`
- `reflect.reporter(...)` -> `reflect.addReporter(...)`
- Add `t.reflect`, `t.files`, and `t.options` getters
- Remove `arg` in `t.call(plugin, arg)`
- Set default reporter in `t.run()` instead of in the CLI
- Simplify TS definitions
- Update docs with API changes
- Update tests to prefer `t.reflect` over `t.call(...)`
- Fix a few odd names/error messages
- A few other smaller changes
- Update roadmap

--- a/playground/index.html
+++ b/playground/index.html
@@ -178,19 +178,22 @@
     var buttons = document.getElementsByClassName("load-button")
     var iframe = document.querySelector("iframe.display-wrap")
 
-    Array.prototype.forEach.call(buttons, function (button) {
-        button.onclick = function () {
-            if (active !== button) {
-                active.className = active.className.replace(/\bactive\b/g, "")
-                button.className += " active"
-                active = button
-            }
-
-            iframe.contentWindow.postMessage(
-                button.getAttribute("data-dir"),
-                "http://localhost:8080")
+    /** @this {HTMLButtonElement} */
+    function onclick() {
+        if (active !== this) {
+            active.className = active.className.replace(/\bactive\b/g, "")
+            this.className += " active"
+            active = this
         }
-    })
+
+        iframe.contentWindow.postMessage(
+            this.getAttribute("data-dir"),
+            "http://localhost:8080")
+    }
+
+    for (var i = 0; i < buttons.length; i++) {
+        buttons[i].onclick = onclick
+    }
 
     iframe.contentWindow.addEventListener("DOMContentLoaded", function () {
         active.className += " active"
